--- a/package.json
+++ b/package.json
@@ -2,20 +2,11 @@
   "name": "myapp",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
-    "morgan": "~1.9.1",
-    "nodemon": "^3.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.53.0"
+    "morgan": "~1.9.1"
   }
 }
