--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ node_modules
 public/quranic_universal_library/tafsir
 public/quranic_universal_library/translation/Simple
 public/quranic_universal_library/translation/word_by_word
+public/quranic_universal_library/translation/wdw_simplifer
