--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ public/quranic_universal_library/tafsir
 public/quranic_universal_library/translation/Simple
 public/quranic_universal_library/translation/word_by_word
 public/quranic_universal_library/translation/wdw_simplifer
+public/quranic_universal_library/translation/fix_wdw_simplifer
