--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ public/quranic_universal_library/translation/Simple
 public/quranic_universal_library/translation/word_by_word
 public/quranic_universal_library/translation/wdw_simplifer
 public/quranic_universal_library/translation/fix_wdw_simplifer
+public/locations/raw_data/
