[fit] audio with segments compressed

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ public/quranic_universal_library/translation/word_by_word
 public/quranic_universal_library/translation/wdw_simplifer
 public/quranic_universal_library/translation/fix_wdw_simplifer
 public/locations/raw_data/
+public/audio/audio_with_segments/
